container/pods/kubernetes-dc-pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: domain-controller
  labels:
    app: domain-controller
spec:
  restartPolicy: Always
  terminationGracePeriodSeconds: 30
  containers:
    - resources:
        limits:
          cpu: '1'
          memory: 1000Mi
        requests:
          cpu: 10m
          memory: 64Mi
      terminationMessagePath: /dev/termination-log
      name: domain-controller-domain-controller-container
      ports:
        - containerPort: 9990
          protocol: TCP
      imagePullPolicy: IfNotPresent
      terminationMessagePolicy: File
      image: 'quay.io/jdenise/jboss-eap8-domain-openjdk17-openshift:4.0'
      volumeMounts:
        - mountPath: /tmp/domain-init
          name: dc-init-volume
  volumes:
    - name: dc-init-volume
      persistentVolumeClaim:
        claimName: dc-setup-volume
