container/pods/db-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: db-route
spec:
  to:
    kind: Service
    name: db-service
    weight: 100
  port:
    targetPort: db-service-8080
  tls:
    termination: edge
  wildcardPolicy: None
